# rohmu

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Makefile  README.md  README.rst  about.html  api__object_storage.html  autodoc.html  conf.py  development.html  genindex.html  index.html  make_release.py  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.docs.txt  rohmu.spec  search.html  searchindex.js  setup.cfg  setup.py  toc.html  usage.html
.github/workflows/: build.yml  codeql.yml  publish-pypi.yaml  sphinx.yml
_sources/: about.rst.txt  index.rst.txt  toc.rst.txt
_static/: documentation_options.js
docs/: about.rst  api__object_storage.rst  autodoc.rst  conf.py  development.rst  index.rst  usage.rst
rohmu/: __init__.py  atomic_opener.py  compat.py  compressor.py  dates.py  encryptor.py  errors.py  factory.py  filewrap.py  inotify.py  rawfile.py  rohmufile.py  snappyfile.py  transfer_pool.py  typing.py  util.py  zstdfile.py
rohmu/common/: constants.py  models.py  statsd.py  strenum.py
rohmu/delta/: common.py  snapshot.py
rohmu/notifier/: __init__.py  http.py  interface.py  logger.py  null.py
rohmu/object_storage/: __init__.py  azure.py  base.py  config.py  google.py  local.py  s3.py  sftp.py  swift.py
test/: base.py  conftest.py  test_atomic_opener.py  test_compressor.py  test_dates.py  test_delta.py  test_encryptor.py  test_factory.py  test_from_model.py  test_inotify.py  test_notification.py  test_object_storage_azure.py  test_object_storage_google.py  test_object_storage_local.py  test_object_storage_s3.py  test_object_storage_sftp.py  test_object_storage_swift.py  test_rohmu.py  test_rohmu_dates.py  test_rohmufile.py  test_statsd.py  test_storage.py  test_transfer_pool.py  test_util.py  test_zstdfile.py
test/common/: test_statsd.py
test/delta/: test_snapshot.py
test/notifier/: test_http.py  test_interface.py  test_logger.py  test_null.py
test/object_storage/: test_azure.py  test_google.py  test_google_credentials.py  test_local.py  test_object_storage.py  test_s3.py  test_sftp.py  test_swift.py
test/playback/: README.md  conftest.py  test_ovh_s3.py
test/playback/cassettes/test_ovh_s3/: test_create_object_store_if_needed__existing.yaml  test_create_object_store_if_needed__missing_permission.yaml  test_params.json  test_transfer_init__compat_existing.yaml  test_verify_object_storage__bad_aws_secret_access_key.yaml  test_verify_object_storage__existing.yaml  test_verify_object_storage__missing_permission.yaml  test_verify_object_storage__new_bucket.yaml
test/playback/fixtures/: ovh_setup.py  s3-admin-user-policy.json  s3-user1-user-policy.json
