[build-system]
requires = ['setuptools', 'wheel', 'requests']
build-backend = 'setuptools.build_meta'

[tool.ruff]
target-version = "py38"
line-length = 125

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "I",
  "BLE",
  "Q",
  "TID",
  "PL",
  "RUF100", # unused-noqa
]
extend-ignore = [
  "PLR0904", # too-many-public-methods
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0914", # too-many-locals
  "PLR0915", # too-many-statements
  "PLR0916", # too-many-boolean-expressions
  "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.isort]
combine-as-imports = true
from-first = true
lines-between-types = 1
no-sections = true
order-by-type = false
