[metadata]
name = rohmu
version = attr: rohmu.version.VERSION
[options]
package_dir =
    =.
packages = find:
install_requires =
    azure-storage-blob == 2.1.0
    botocore
    cryptography
    google-api-python-client
    httplib2
    oauth2client
    paramiko
    pydantic
    python-dateutil
    python-snappy
    requests
    zstandard
[options.packages.find]
where = .
include = rohmu
