[metadata]
name = rohmu
version = attr: rohmu.version.VERSION
description = "Rohmu is a python library providing an interface to various cloud storage providers."
long_description = file: README.rst
license = Apache 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Libraries :: Python Modules
url = https://github.com/Aiven-Open/rohmu/
platforms =
    POSIX
    MacOS
[options]
package_dir =
    =.
packages = find:
python_requires = >=3.8
install_requires =
    azure-storage-blob >= 2.1.0
    botocore
    cryptography
    google-api-python-client
    httplib2
    oauth2client
    paramiko
    pydantic < 2
    python-dateutil
    python-snappy
    requests
    zstandard
    typing_extensions >= 3.10, < 5
[options.packages.find]
where = .
include = rohmu*
[options.package_data]
* = py.typed
